--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -3,8 +3,8 @@ on:
     branches:
       - 'main'
 jobs:
-  docker:
-    runs-on: ubuntu-latest
+  build-artifact:
+    runs-on: ubuntu-latest  
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -13,11 +13,22 @@ jobs:
         java-version: 11
     - name: Build project with Maven
       run: mvn -B clean package 
+    - uses: actions/upload-artifact@v2
+      with:
+        name: application-artifact
+        path: target/lamp-service.jar
+  build-image:
+    runs-on: ubuntu-latest
+    steps:
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - uses: actions/download-artifact@v2
+      with:
+        name: application-artifact
+        path: target/lamp-service.jar
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
