--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -13,6 +13,7 @@ jobs:
         java-version: 11
     - name: Build project with Maven
       run: mvn -B clean package 
+    - run: ls -la && ls -la target/
   build-image:
     runs-on: ubuntu-latest
     needs: build-artifact
@@ -22,6 +23,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - run: ls -la && ls -la target/
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
