--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -22,6 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-artifact
     steps:
+    - uses: actions/checkout@v2
     - uses: actions/download-artifact@v1
       with:
           name: app-artifact
