--- a/config.yml
+++ b/config.yml
@@ -8,9 +8,10 @@ logging:
     leanix.net: DEBUG
 database:
   driverClass: org.postgresql.Driver
-  user: lamp_user@psql-lamp
-  password: rv[dK&<mZ3)I8kvq
-  url: jdbc:postgresql://psql-lamp.postgres.database.azure.com/psqldb-lamp
+  user: lamp_user@psql-lamp-local
+  password: ${DATABASE_PASSWORD}
+  # e.g. jdbc:postgresql://psql-lamp-local.postgres.database.azure.com/psqldb-lamp
+  url: ${DATABASE_CONNECTION_STRING}
   properties:
     charSet: UTF-8
   maxWaitForConnection: 1s
