--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -5,7 +5,7 @@ on:
 env:
   CLUSTER_NAME: aks-lamp-local
   CLUSTER_RESOURCE_GROUP: lamp-service-local
-  NAMESPACE: lamp-service
+  APP_NAME: lamp
 jobs:
   build-artifact:
     runs-on: ubuntu-latest  
@@ -42,7 +42,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: shadadelic/lamp-service:${{ github.run_attempt }}
+        tags: shadadelic/${{ env.APP_NAME }}-service:${{ github.run_attempt }}-${{ github.sha }}
   # Based on the following tutorial
   # Ref.: https://docs.microsoft.com/en-us/azure/aks/kubernetes-action
   deploy-to-dev:
@@ -55,16 +55,13 @@ jobs:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
         cluster-name: ${{ env.CLUSTER_NAME }}
         resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
-    - run: |
-        kubectl create namespace ${{ env.NAMESPACE }} --dry-run=client -o json | kubectl apply -f -
-  #   - uses: azure/k8s-deploy@v1
-  #     with:
-  #       manifests: |
-  #         ${{ github.workspace }}/manifests/deployment.yaml
-  #         ${{ github.workspace }}/manifests/service.yaml
-  #       images: |
-  #         ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
-  #       namespace: ${{ env.NAMESPACE }}    
+    - uses: azure/k8s-deploy@v1
+      with:
+        manifests: |
+          ${{ github.workspace }}/manifests/aks/deployment.yaml
+          ${{ github.workspace }}/manifests/aks/service.yaml
+        images: shadadelic/${{ env.APP_NAME }}-service:${{ github.run_attempt }}-${{ github.sha }}
+        namespace: ${{ env.APP_NAME }}
   # deploy-to-prod:
   #   runs-on: ubuntu-latest
   #   needs: deploy-to-env
