--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -50,6 +50,7 @@ jobs:
     needs: build-image
     environment: dev
     steps:
+    - uses: actions/checkout@v2
     - uses: azure/aks-set-context@v1
       with:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
