--- a/src/main/manifests/aks/deployment.yaml
+++ b/src/main/manifests/aks/deployment.yaml
@@ -37,9 +37,12 @@ spec:
                 key: database-password
                 optional: false 
       volumes:
+        - name: config-volume
+          configMap:
+            name: lamp-service-configmap
         - name: lamp-key-vault
           csi:
-            driver: secrets-store.csi.k8s.io
+            driver: bsecrets-store.csi.k8s.io
             readOnly: true
             volumeAttributes:
               secretProviderClass: "azure-secrets-csi-provider"
